--- a/src/web/style.css
+++ b/src/web/style.css
@@ -57,7 +57,7 @@ input[type="radio"] {
 .collapsible {
     margin-top: 4px;
     cursor: pointer;
-    padding: 12px;
+    padding: 8px;
     width: 100%;
     border: none;
     text-align: left;
@@ -66,24 +66,23 @@ input[type="radio"] {
     border-radius: 4px;
     background-color: white;
     color: var(--light-gray);
-    box-shadow: 1px 3px 2px 2px #f1f1f1;
 }
 
 .collapsible:hover {
-    background-color: var(--brand-color) !important;
-    color: white !important;
+    color: var(--brand-color) !important;
     box-shadow: none;
 }
 
-.collapsible:after {
-    content: '\002B';
+.collapsible:before {
+    content: '>';
     font-weight: bold;
-    float: right;
-    margin-left: 5px;
+    float: left;
+    margin-right: 5px;
 }
 
-.active:after {
-    content: "\2212";
+.active:before {
+    content: ">";
+    transform: rotate(90deg);
 }
 
 .content {
@@ -132,7 +131,7 @@ input[type="radio"] {
     padding: 8px;
     font-size: 18px;
     justify-content: space-between;
-    border-bottom: 2px solid var(--brand-color);
+    box-shadow: 1px 1px 3px var(--light-gray);
 }
 
 .add-collection-btn {
@@ -146,6 +145,7 @@ input[type="radio"] {
     color: black;
 }
 .pas-collections {
+    padding-top: 10px;
     overflow-x: auto;
 }
 .api-request-details {
@@ -184,8 +184,7 @@ input[type="radio"] {
     align-items: center;
     border-top: 2px solid var(--light-gray);
     font-weight: bold;
-    font-size: 20px;
-    letter-spacing: 1.5px;
+    font-size: 16px;
 }
 .pas-settings > div{
     padding: 2px 4px;
@@ -203,7 +202,7 @@ input[type="radio"] {
 }
 .pas-setting::before {
     content: "\2699";
-    font-size: 32px;
+    font-size: 26px;
     margin-top: -4px;
     margin-right: 2px;
 }
@@ -416,4 +415,68 @@ input[type="radio"] {
 .pas-config-table > table > tbody > tr > td {
    text-align: center;
    border: 1px solid var(--light-gray);
+}
+
+.live-server-button {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    flex-grow: .2;
+    justify-content: center;
+}
+.live-server-button > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    color: var(--brand-color);
+    padding: 6px;
+    border: 2px solid var(--brand-color);
+    height: 100%;
+    width: 60%;
+    border-radius: 4px;
+}
+.live-server-button > div:hover {
+    cursor: pointer;
+    background-color: var(--brand-color);
+    color: white;
+    font-weight: bold;
+}
+
+.pas-collection-input-container {
+    display: none;
+    padding: 8px;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--light-white);
+}
+.pas-collection-input-container > input {
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid var(--light-gray);
+    width: 80%;
+}
+.pas-collection-input-actions {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.pas-collection-input-actions > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    font-weight: bold;
+    color: var(--light-gray);
+    scale: 1.1;
+}
+.pas-collection-input-actions > div:not(:first-child):hover {
+    cursor: pointer;
+    color: var(--brand-color);
+    background-color: var(--light-white);
+}
+.pas-collection-input-actions > div:not(:last-child):hover {
+    cursor: pointer;
+    color: green;
 }
