--- a/web-view/src/App.scss
+++ b/web-view/src/App.scss
@@ -83,7 +83,7 @@ input[type="radio"] {
 
 .pas-container {
   display: flex;
-  height: 94vh;
+  height: 93vh;
   background-color: vars.$light-white;
 
   .pas-sidebar {
@@ -284,6 +284,9 @@ input[type="radio"] {
     border-radius: 4px;
     margin: 4px;
     font-weight: bold;
+  }
+  select {
+    cursor: pointer;
   }
 
   .server-breadcrumb {
@@ -498,11 +501,16 @@ input[type="radio"] {
         }
       }
       .response-tab-container {
+        max-height: 100%;
+        overflow: hidden;
         >div {
           background-color: white;
           margin-top: 2px;
         }
         .response-tab-name-input-container {
+          display: flex;
+          align-items: center;
+          height: 8%;
           >input {
             width: 30%;
             border: 0.5px solid vars.$light-gray;
@@ -517,7 +525,7 @@ input[type="radio"] {
         background-color: white;
         padding: 8px 4px;
         border-radius: 4px;
-        height: 6%;
+        height: 8%;
         > div {
           width: 100%;
           flex-grow: 1;
@@ -567,6 +575,7 @@ input[type="radio"] {
         align-items: center;
         padding: 8px 4px;
         font-size: 14px;
+        height: 6%;
 
         &>div {
           border-bottom: 2.5px solid transparent;
@@ -586,15 +595,68 @@ input[type="radio"] {
       }
 
       .response-body {
-        height: 95%;
-        background-color: white;
+        height: 85%;
+        max-height: 85%;
         display: flex;
         flex-direction: column;
+        overflow: hidden;
+        .response-body-content-container {
+          display: flex;
+          height: 90%;
+          max-height: 90%;
+          flex-direction: column;
+          overflow: hidden;
+
+          .invalid-json {
+            color: red;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+          }
+        }
+        .response-body-row-numbers {
+          >div {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            padding: 0.6px 2px;
+          }
+        }
+       
         .response-body-content {
-          padding: 2px;
-          height: 94%;
+          white-space: pre-wrap;
+          word-break: break-word;
           width: 100%;
+          height: 100%;
           outline: none;
+          border: none;
+          padding: 10px;
+        }
+        .response-headers-container {
+          padding: 10px 20px;
+          .response-headers-table {
+            table {
+              border: 1px solid;
+              width: 100%;
+              text-align: center;
+                td,th {
+                  border: 1px solid vars.$light-gray;
+                  text-align: center;
+                  padding: 2px;
+                  input {
+                    border: none;
+                    outline: none;
+                    width: 100%;
+                    padding: 0 5px;
+                    margin: 0;
+                  }
+                }
+                td:first-of-type, th:first-of-type  {
+                  width: 40px;
+                }
+            }
+          }
         }
       }
     }
