--- a/web-view/src/button.scss
+++ b/web-view/src/button.scss
@@ -3,7 +3,14 @@
 .btn-primary {
     border-radius: 4px;
     background-color: white;
-    border: 1px solid vars.$brand-color;
+    border: 2px solid vars.$brand-color;
+    color: vars.$brand-color;
+    font-weight: bold;
+    &:hover {
+        cursor: pointer;
+        background-color: vars.$brand-color;
+        color: white
+    }
 }
 
 .btn-secondary {
@@ -24,8 +31,8 @@
     padding: 8px 16px;
 }
 .btn-md {
-    padding: 8px 16px;
+    padding: 8px 32px;
 }
 .btn-lg {
-    padding: 8px 16px;
+    padding: 8px 64px;
 }
