--- a/web-view/src/App.scss
+++ b/web-view/src/App.scss
@@ -241,6 +241,8 @@ input[type="radio"] {
 
         &.active-api {
           color: royalblue;
+          font-weight: bolder;
+          background-color: whitesmoke;
         }
       }
     }
