--- a/web-view/src/App.scss
+++ b/web-view/src/App.scss
@@ -155,7 +155,7 @@ input[type="radio"] {
   height: 100%;
   flex-direction: column;
   padding: 0 6px;
-
+  overflow: hidden;
   .collection {
     display: flex;
     align-items: center;
@@ -181,6 +181,10 @@ input[type="radio"] {
         background-color: whitesmoke;
       }
     }
+  }
+  .collections-container {
+    height: 100%;
+    overflow-y: auto;
   }
 
   .accordion-item:first-of-type {
@@ -243,6 +247,21 @@ input[type="radio"] {
           color: royalblue;
           font-weight: bolder;
           background-color: whitesmoke;
+        }
+        .api-options{
+          display: flex;
+          flex-grow: 1;
+          align-items: center;
+          justify-content: flex-end;
+          padding-right: 10px;
+
+          .api-delete {
+            color: red;
+            &:hover {
+              cursor: pointer;
+              scale: 1.1;
+            }
+          }
         }
       }
     }
@@ -347,7 +366,6 @@ input[type="radio"] {
   margin: 6px;
   width: 100%;
   height: 100%;
-
   input,
   select {
     padding: 8px;
@@ -362,6 +380,8 @@ input[type="radio"] {
   }
 
   .server-breadcrumb {
+    display: flex;
+    align-items: center;
     font-weight: bold;
   }
 
@@ -381,13 +401,11 @@ input[type="radio"] {
 
       .server-breadcrumb {
         height: 32%;
-
         input {
           height: 80%;
           padding: 2px 2px;
-          width: 88.5%;
           border-color: transparent;
-
+          background-color: transparent;
           &:focus {
             border: .2px solid vars.$light-gray;
           }
@@ -395,11 +413,9 @@ input[type="radio"] {
       }
 
       .server-url-container {
-        height: 70%;
         display: flex;
         width: 100%;
         align-items: center;
-        background-color: white;
 
         input[disabled] {
           border: 1px solid vars.$light-gray;
@@ -491,7 +507,6 @@ input[type="radio"] {
       margin-top: 8px;
       border-radius: 4px;
       height: 85%;
-
       select {
         outline: none;
         border: none;
@@ -509,13 +524,8 @@ input[type="radio"] {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 4px;
+        padding: 4px 12px 4px 12px;
         color: vars.$light-gray;
-
-
-        >div:last-of-type {
-          margin-right: 20px;
-        }
 
         li {
           font-size: 12px;
@@ -615,7 +625,6 @@ input[type="radio"] {
           height: 8%;
 
           >input {
-            width: 30%;
             border: 0.5px solid vars.$light-gray;
           }
         }
@@ -810,7 +819,22 @@ input[type="radio"] {
   >textarea {
     resize: none;
   }
+  .apis-status {
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
 
+    > span:first-of-type {
+      font-weight: bold;
+      color: vars.$brand-color;
+    }
+    > span:last-of-type {
+      font-weight: bold;
+      color: royalblue;
+      margin-left: 4px;
+    }
+  }
   .pas-collection-apis-viewer {
     margin-top: 8px;
     width: 50%;
@@ -830,5 +854,13 @@ input[type="radio"] {
         border-bottom: 1px solid vars.$light-gray;
       }
     }
+  }
+
+  .pas-collection-delete-btn {
+    display: flex;
+    width: 50%;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
   }
 }
