added app message

--- a/web-view/src/App.scss
+++ b/web-view/src/App.scss
@@ -156,6 +156,7 @@ input[type="radio"] {
   flex-direction: column;
   padding: 0 6px;
   overflow: hidden;
+
   .collection {
     display: flex;
     align-items: center;
@@ -182,9 +183,46 @@ input[type="radio"] {
       }
     }
   }
+
   .collections-container {
-    height: 100%;
+    height: 80%;
     overflow-y: auto;
+  }
+  .sidebar-footer {
+    height: 20%;
+    border-top: 0.5px solid vars.$light-gray;
+    position: relative;
+    .app-status {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      bottom: 2px;
+      left: 0;
+      right: 0;
+      width: 100%;
+      position: absolute;
+      text-align: center;
+      font-weight: bold;
+      color: vars.$brand-color;
+      height: 20%;
+
+      &.app-status-success {
+        background-color: green;
+        color: white;
+      }
+      &.app-status-error {
+        background-color: red;
+        color: white;
+      }
+      &.app-status-warning {
+        background-color: orange;
+        color: white;
+      }
+      &.app-status-info {
+        background-color: royalblue;
+        color: white;
+      }
+    }
   }
 
   .accordion-item:first-of-type {
@@ -248,7 +286,8 @@ input[type="radio"] {
           font-weight: bolder;
           background-color: whitesmoke;
         }
-        .api-options{
+
+        .api-options {
           display: flex;
           flex-grow: 1;
           align-items: center;
@@ -257,6 +296,7 @@ input[type="radio"] {
 
           .api-delete {
             color: red;
+
             &:hover {
               cursor: pointer;
               scale: 1.1;
@@ -366,6 +406,7 @@ input[type="radio"] {
   margin: 6px;
   width: 100%;
   height: 100%;
+
   input,
   select {
     padding: 8px;
@@ -401,11 +442,13 @@ input[type="radio"] {
 
       .server-breadcrumb {
         height: 32%;
+
         input {
           height: 80%;
           padding: 2px 2px;
           border-color: transparent;
           background-color: transparent;
+
           &:focus {
             border: .2px solid vars.$light-gray;
           }
@@ -507,6 +550,7 @@ input[type="radio"] {
       margin-top: 8px;
       border-radius: 4px;
       height: 85%;
+
       select {
         outline: none;
         border: none;
@@ -819,22 +863,25 @@ input[type="radio"] {
   >textarea {
     resize: none;
   }
+
   .apis-status {
     display: flex;
     width: 50%;
     align-items: center;
     justify-content: center;
 
-    > span:first-of-type {
+    >span:first-of-type {
       font-weight: bold;
       color: vars.$brand-color;
     }
-    > span:last-of-type {
+
+    >span:last-of-type {
       font-weight: bold;
       color: royalblue;
       margin-left: 4px;
     }
   }
+
   .pas-collection-apis-viewer {
     margin-top: 8px;
     width: 50%;
@@ -849,6 +896,36 @@ input[type="radio"] {
       display: flex;
       align-items: center;
       margin-bottom: 2px;
+      overflow: hidden;
+
+      >div {
+        margin: 0 2px;
+        display: flex;
+        align-items: center;
+        white-space: nowrap;
+
+        &:nth-child(4) {
+          width: 25%;
+          font-weight: bold;
+          overflow-y: auto;
+          justify-content: flex-start;
+          color: royalblue;
+        }
+
+        &:nth-child(5) {
+          width: 60%;
+          overflow-y: auto;
+          color: vars.$light-gray;
+        }
+      }
+
+      .api-method-name {
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        width: 50px;
+      }
 
       &:not(:last-of-type) {
         border-bottom: 1px solid vars.$light-gray;
