--- a/web-view/src/components/json-editor.scss
+++ b/web-view/src/components/json-editor.scss
@@ -3,7 +3,7 @@
     align-items: flex-start;
     border: none;
     border-radius: 4px;
-    overflow: auto;
+    overflow-y: auto;
     height: 100%;
     max-height: 100%;
 
@@ -25,5 +25,7 @@
         outline: none;
         resize: none;
         line-height: 1.5em;
+        white-space: pre-wrap;
+        overflow-wrap: break-word;
     }
 }
